# Oefeningen-PDS

./: CMakeLists.txt
Oefening-1/: readfloats.cpp
Oefening-10/: oef10.cpp
Oefening-11/: Oef11.cpp
Oefening-12/: Oef12.cpp  roundtrip_1node.slurm  roundtrip_2node.slurm
Oefening-13/: Oef13.cpp
Oefening-14/: Oef14.cpp
Oefening-15/: SafeQueue.h  main.cpp
Oefening-16/: Oef16.cpp
Oefening-17/: Oef17.cpp
Oefening-18/: Oef18.cpp  vis.py
Oefening-19/: Oef19.cpp
Oefening-2/: oef2.cpp
Oefening-20/: Oef20.cpp
Oefening-21/: Oef21.cu  cudaprog  oef21.err  oef21.out  oef21.slurm
Oefening-22/: fractal  fractal.cu  fractal.slurm.e58640255  fractal.slurm.o58640255
Oefening-23/: Oef23.cu  Oef23.slurm
Oefening-24/: encrypt.cpp  encrypt.h  encrypt_cuda.cpp  encrypt_cuda.cu  encrypt_cuda.h  main.cpp  parameters.h
Oefening-4/: cmake_test.o65160806  oefening4.slurm
Oefening-5/: oef5.cpp
Oefening-8/: oef8.cpp
Oefening-9/: oef9.cpp
